--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
+    "@native-base/icons": "^0.0.11",
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.4.0",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
