--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
     "react": "17.0.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.1",
     "react-icons": "^4.4.0",
     "react-native": "0.64.3",
