--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
     "@native-base/icons": "^0.0.11",
+    "axios": "^0.27.2",
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
